feat: lobby init